Bug 137314 - FILEOPEN DOCX VML shapes with arbitrary rotation imported incorrectly
Summary: FILEOPEN DOCX VML shapes with arbitrary rotation imported incorrectly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:7.2.0 target:7.1.5
Keywords: filter:docx
Depends on:
Blocks: VML-Shapes
  Show dependency treegraph
 
Reported: 2020-10-07 14:43 UTC by NISZ LibreOffice Team
Modified: 2021-05-26 18:04 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (22.16 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-10-07 14:43 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer (55.85 KB, image/png)
2020-10-07 14:43 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-10-07 14:43:33 UTC
Created attachment 166162 [details]
Example file from Word

Attached document was made in Word by copying the shape from bug #105875 and manually rotating to a few settings and flipping them as well.

Steps to reproduce:
    1. Open attached document

Actual results:
Shapes rotation does not match the original setting in Word.

Expected results:
Shapes are rotated to the same direction.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: a883002d8e2fd77f80c43b7b2e6ac329d83d929d
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-10-07 14:43:51 UTC
Created attachment 166163 [details]
Screenshot of the original document side by side in Word and Writer
Comment 2 Xisco Faulí 2020-10-12 17:25:22 UTC
Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: a9976a958b2857e308c6598532151878615bfd9f
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

in previous versions, they are displayed horizontally
Comment 3 Commit Notification 2021-05-25 09:23:17 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a312837a1a4d0b9628d5c587c8ab5ec68179a051

tdf#137314 apply conversion from vml angle unit 'fd'

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2021-05-25 12:16:59 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/0cc664f82535eb33b811e23fa3229b10f2c2bf95

tdf#137314 apply conversion from vml angle unit 'fd'

It will be available in 7.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2021-05-26 07:19:49 UTC
Verified in

Version: 7.1.5.0.0+ / LibreOffice Community
Build ID: bdcf20ada557ef85297869014e678743f41d0815
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Regina, thanks for fixing this issue!!
Comment 6 Commit Notification 2021-05-26 15:14:36 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/60b98189281524c85b559ee3b6adc1381b793b9d

tdf137314 Add margin to CppunitTest assertions

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2021-05-26 18:04:57 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/c3dc12c4c66bfec6c9d29603f9707d55fbb11d94

tdf137314 Add margin to CppunitTest assertions

It will be available in 7.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.