tdf#137314 apply conversion from vml angle unit 'fd'

Fixes wrong rotation in tdf#109129 and tdf#142432 too, but they have
further, unrelated errors.

Change-Id: I7bd56876bb42b261fe425f80cf9beb639c3ac276
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/116078
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/116094