oox/source/vml/vmlshape.cxx
@@ -1079,10 +1079,9 @@ namespace
         {
             if (SdrObject* pShape = GetSdrObjectFromXShape(rxShape))
             {
-                // -1 is required because the direction of MSO rotation is the opposite of ours
-                // 100 is required because in this part of the code the angle is in a hundredth of
-                // degrees.
-                auto nAngle = -1 * 100.0 * rTypeModel.maRotation.toDouble();
+                // The needed factor -1 for opposite direction and factor 100 for Degree100 is
+                // contained in method decodeRotation().
+                auto nAngle(ConversionHelper::decodeRotation(rTypeModel.maRotation));
                 double nHRad = nAngle * F_PI18000;
                 pShape->NbcRotate(pShape->GetSnapRect().Center(), nAngle, sin(nHRad), cos(nHRad));
             }
